# template_rust

./: .dprint.json  .gitignore  Cargo.toml  JustFile  README.md  cargo-generate.toml  cliff.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml
.just/: all.just  check_install.just  install.just
