[workspace]
resolver = "3"

[package]
name = "{{ crate_name }}"
version = "0.1.0"
categories = ["{{ categories }}"]
edition = "{{ edition }}"
keywords = ["{{ keywords }}"]
license = "MIT OR Apache-2.0"
publish = {{ publish }}
readme = "README.md"
repository = "{{ repository }}"
description = "{{ description }}"

[dependencies]

[features]
default = []

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "unwind"
# You can strip "symbols" at the cost of making backtrace meaningless.
strip = "debuginfo"

[profile.release-debug]
inherits = "release"
debug-assertions = true
strip = "none"

[profile.release-size]
# More optimisations possible here: https://github.com/johnthagen/min-sized-rust
inherits = "release"
opt-level = "z"

[lints.rust]
deprecated-safe = "deny"
future-incompatible = "deny"
keyword-idents = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
refining-impl-trait = "deny"
rust-2018-compatibility = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"
rust-2024-compatibility = "deny"
unknown-or-malformed-diagnostic-attributes = "deny"
# Used for code coverage, see https://github.com/taiki-e/cargo-llvm-cov#exclude-code-from-coverage
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# All restriction clippy lint, from Rust 1.91
absolute_paths = "deny"
alloc_instead_of_core = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "deny"
as_conversions = "warn"
as_pointer_underscore = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
big_endian_bytes = "allow"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "deny"
default_union_representation = "allow"
disallowed_script_idents = "deny"
doc_include_without_cfg = "deny"
else_if_without_else = "deny"
deref_by_slicing = "deny"
empty_drop = "warn"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
exit = "deny"
expect_used = "allow"
field_scoped_visibility_modifiers = "allow"
filetype_is_file = "warn"
float_arithmetic = "warn"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
implicit_return = "allow"
indexing_slicing = "warn"
infinite_loop = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "allow"
integer_division = "warn"
integer_division_remainder_used = "warn"
iter_over_hash_type = "deny"
large_include_file = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "allow"
little_endian_bytes = "allow"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
min_ident_chars = "allow"
missing_assert_message = "allow"
mem_forget = "warn"
missing_asserts_for_indexing = "warn"
missing_docs_in_private_items = "warn"
missing_inline_in_public_items = "deny"
missing_trait_methods = "allow"
mixed_read_write_in_expression = "deny"
mod_module_files = "deny"
module_name_repetitions = "deny"
modulo_arithmetic = "allow"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_raw_strings = "deny"
non_ascii_literal = "allow"
non_zero_suggestions = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "warn"
pointer_format = "warn"
precedence_bits = "deny"
print_stderr = "deny"
print_stdout = "deny"
pub_use = "warn"
pub_with_shorthand = "allow"
pub_without_shorthand = "deny"
question_mark_used = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "allow"
same_name_method = "deny"
self_named_module_files = "allow"
semicolon_inside_block = "deny"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "deny"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
str_to_string = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
string_slice = "warn"
string_to_string = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
todo = "allow"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "warn"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unreachable = "allow"
unseparated_literal_suffix = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "allow"
